major refactoring of data entry controls; in progress -- stuff is very broken right now

--- a/bhoma/apps/webapp/templates/touchscreen.html
+++ b/bhoma/apps/webapp/templates/touchscreen.html
@@ -7,8 +7,9 @@
     <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/layout.js?version={{app_version}}"></script>   
     <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/touchscreen-ui.js?version={{app_version}}"></script>   
     <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/formnav.js?version={{app_version}}"></script>
-    <script language="javascript" type="text/javascript;version=1.7" src="{{MEDIA_URL}}webapp/javascripts/workflow.js?version={{app_version}}"></script>
     <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/dates.js?version={{app_version}}"></script>
+    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/entrycontrols.js?version={{app_version}}"></script>
+    <script language="javascript" type="text/javascript;version=1.7" src="{{MEDIA_URL}}webapp/javascripts/workflow.js?version={{app_version}}"></script>
    
     <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/jquery-1.4.2.min.js"></script>
     <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/shortcut.js"></script>
