misc; new space key, play with alternate autocomplete layouts

--- a/bhoma/apps/webapp/templates/touchscreen.html
+++ b/bhoma/apps/webapp/templates/touchscreen.html
@@ -22,6 +22,8 @@
 
 XFORM_URL = "{% url xform_player_proxy %}";
 PRELOADER_URL = "{% url xform_preloader %}";
+AUTOCOMPLETE_URL = "{% url bhoma.apps.webapp.views.autocomplete %}";
+
 XFORM_NAME = "{{form.name}}";
 XFORM_UID = null;
 
