create stub console to allow running w/o firebug active

--- a/bhoma/apps/webapp/templates/touchscreen.html
+++ b/bhoma/apps/webapp/templates/touchscreen.html
@@ -20,6 +20,12 @@
 
     <script language="javascript">
 
+if (!window.console) {
+  window.console = {
+    log: function () { }
+  };
+}
+
 XFORM_URL = "{% url xform_player_proxy %}";
 PRELOADER_URL = "{% url xform_preloader %}";
 AUTOCOMPLETE_URL = "{% url bhoma.apps.webapp.views.autocomplete %}";
