refactor patient reg to support patient info edit

--- a/bhoma/apps/webapp/templates/touchscreen.html
+++ b/bhoma/apps/webapp/templates/touchscreen.html
@@ -52,7 +52,7 @@ function init () {
   
 {% else %}
 
-  gFormAdapter = new workflowAdapter(new {{ form.wfobj }}());
+  gFormAdapter = new workflowAdapter(new {{ form.wfobj }}({{ form.wfargs|default:""|safe }}));
 
 {% endifequal %}
 
