change default date order

--- a/bhoma/apps/webapp/templates/touchscreen.html
+++ b/bhoma/apps/webapp/templates/touchscreen.html
@@ -36,8 +36,8 @@ XFORM_UID = null;
 CLINIC_PREFIX = {{ clinic.prefix }};
 CLINIC_NUM_CHW_ZONES = {{ clinic.num_chw_zones|default:"8" }};
 
-//NUMERIC_MONTHS = true;
-//DATE_DISPLAY_ORDER = 'dmy';
+NUMERIC_MONTHS = true;
+DATE_DISPLAY_ORDER = 'dmy';
 
 function init () {
 
