add a level of indirection for ID field prefixes (this allows use to prefix the CHW referral ID in xforms)

--- a/bhoma/apps/webapp/templates/touchscreen.html
+++ b/bhoma/apps/webapp/templates/touchscreen.html
@@ -33,7 +33,10 @@ AUTOCOMPLETE_URL = "{% url bhoma.apps.webapp.views.autocomplete %}";
 XFORM_NAME = "{{form.name}}";
 XFORM_UID = null;
 
-CLINIC_PREFIX = {{ clinic.prefix }};
+PREFIXES = {
+  _clinic: '{{ clinic.prefix }}',
+  _chwref: '{{ clinic.ref_prefix }}',
+};
 CLINIC_NUM_CHW_ZONES = {{ clinic.num_chw_zones|default:"8" }};
 
 NUMERIC_MONTHS = true;
