--- a/bhoma/apps/case/templates/case/single_case.html
+++ b/bhoma/apps/case/templates/case/single_case.html
@@ -16,7 +16,7 @@
     <tr><td>Due on:&nbsp;&nbsp;</td><td><strong>{{ case.get_latest_commcare_case.due_date|date:"d M Y"}}</strong></td></tr>
     <tr><td>Modified on:&nbsp;&nbsp;</td><td><strong>{{ case.modified_on|date:"d M Y H:i"}}</strong></td></tr>
     <tr><td>Closed on:&nbsp;&nbsp;</td><td><strong>{{ case.closed_on|date:"d M Y"|default:"N/A" }}</strong></td></tr>
-    <tr><td>Send/sent to phone?&nbsp;&nbsp;</td><td><strong>{{ case.send_to_phone|yesno:"yes,no" }} {% if case.send_to_phone %}({% value_for_display case.send_to_phone_reason %}){% endif %}    </strong></td></tr>
+    <tr><td>Send/sent to phone?&nbsp;&nbsp;</td><td><strong>{{ case.will_go_to_phone|yesno:"yes,no" }} {% if case.will_go_to_phone_reason %}({% value_for_display case.will_go_to_phone_reason %}){% endif %}    </strong></td></tr>
   </table>
 </div>
 {% endblock %}
