--- a/bhoma/apps/patient/templates/patient/partials/single_patient_summary.html
+++ b/bhoma/apps/patient/templates/patient/partials/single_patient_summary.html
@@ -1,16 +1,16 @@
 <div>
-  <div style="max-width: 480px; margin-top: 10px; position: relative;">
+  <div style="max-width: 520px; margin-top: 10px; position: relative;">
   <table border="0" style="width: 100%; border: 3px solid black; padding: 10px; background-color: white;">
-    <tr><td>Sex:&nbsp;&nbsp;</td><td><strong>{% if patient.gender %}{% ifequal patient.gender 'm' %}Male{% else %}Female{% endifequal %}{% else %}??{% endif %}</strong></td></tr>
-    <tr><td>Birthdate:&nbsp;&nbsp;</td><td><strong>{{ patient.birthdate|date:"d M Y"|default:"??" }} {% if patient.birthdate_estimated %}(est){% endif %}</strong></td></tr>
-    <tr><td>Age:&nbsp;&nbsp;</td><td><strong>{{ patient.formatted_age|default:"??" }}</strong></td></tr>
-    <tr><td>Village:&nbsp;&nbsp;</td><td><strong>{{ patient.address.village|default:"&#x2014;" }} 
+    <tr><td class="prompt">Sex:&nbsp;&nbsp;</td><td><strong>{% if patient.gender %}{% ifequal patient.gender 'm' %}Male{% else %}Female{% endifequal %}{% else %}??{% endif %}</strong></td></tr>
+    <tr><td class="prompt">Birthdate:&nbsp;&nbsp;</td><td><strong>{{ patient.birthdate|date:"d M Y"|default:"??" }} {% if patient.birthdate_estimated %}(est){% endif %}</strong></td></tr>
+    <tr><td class="prompt">Age:&nbsp;&nbsp;</td><td><strong>{{ patient.formatted_age|default:"??" }}</strong></td></tr>
+    <tr><td class="prompt">Village:&nbsp;&nbsp;</td><td><strong>{{ patient.address.village|default:"&#x2014;" }} 
                                                 {% if patient.address.zone %}(zone {{ patient.address.zone }})
                                                 {% else %}{% if patient.address.zone_empty_reason %}
                                                           ({{ patient.address.zone_empty_reason_display }})
                                                           {% endif %}
                                                 {% endif %}</strong></td></tr>
-    <tr><td>Contact:&nbsp;&nbsp;</td><td><strong>{{ patient.default_phone|default:"&#x2014;" }}</strong></td></tr>
+    <tr><td class="prompt">Contact:&nbsp;&nbsp;</td><td><strong>{{ patient.default_phone|default:"&#x2014;" }}</strong></td></tr>
   </table>
 
   {% if not read_only %}
