tiny format change

--- a/bhoma/apps/encounter/templates/encounter/partials/encounter_list.html
+++ b/bhoma/apps/encounter/templates/encounter/partials/encounter_list.html
@@ -7,8 +7,7 @@
 {% for encounter in encounters %}
     {% if forloop.first %}
         <thead>
-            <tr><th colspan=4 class="table-heading">Recent Visits</th>
-            </tr>
+            <tr><th colspan=4 class="table-heading">Recent Visits</th></tr>
             <tr>
 	            <th></th>
 	            <th>Date</th>
