--- a/bhoma/apps/patient/templates/patient/patient_edit_overview.html
+++ b/bhoma/apps/patient/templates/patient/patient_edit_overview.html
@@ -7,5 +7,8 @@
     <tr><td style="font-size: 80%;" valign="middle">Village:&nbsp;&nbsp;</td><td><strong>{{ patient.village|default:"&#x2014;" }}</strong>&nbsp;&nbsp;</td><td id="button5" width="100px"></td></tr>
     <tr><td style="font-size: 80%;" valign="middle">Contact:&nbsp;&nbsp;</td><td><strong>{{ patient.phone|default:"&#x2014;" }}</strong>&nbsp;&nbsp;</td><td id="button6" width="100px"></td></tr>
     <tr><td style="font-size: 80%;" valign="middle"><nobr>CHW Zone:</nobr>&nbsp;&nbsp;</td><td><strong>{{ patient.chw_zone_display }}</strong>&nbsp;&nbsp;</td><td id="button7" width="100px"></td></tr>
+{% if patient.deceased %}
+    <tr><td style="font-size: 60%; text-align: left;" colspan="3" class="important">This patient is deceased</td></tr>
+{% endif %}
   </table>
 </div>
