--- a/bhoma/apps/webapp/static/stylesheets/bhoma.css
+++ b/bhoma/apps/webapp/static/stylesheets/bhoma.css
@@ -79,3 +79,15 @@ nav li:last-child {
     border-right: none;
     padding-right: 0px;
 }
+
+.tabs li 
+{
+    display: inline;
+    padding-right: 20px;
+}
+
+.tabs li.active
+{
+    font-weight:bold;
+}
+ 
