support display of multiple cases per visit (in case sick ANC creates a pregnancy case and a bhoma case)

--- a/bhoma/apps/encounter/templates/encounter/partials/encounter_list.html
+++ b/bhoma/apps/encounter/templates/encounter/partials/encounter_list.html
@@ -25,10 +25,13 @@
                 {% if debug %}</a>{% endif %}
             </td>
             <td nowrap="true"><a href="{% url single_encounter patient.get_id encounter.get_id %}">{{ encounter.display_type }}</a></td>
-            <td class="case_info">{% if encounter.dynamic_data.case %}
-                <a href="{% url patient_case_details patient.get_id, encounter.dynamic_data.case.get_id %}">
-                    {% format_case encounter.dynamic_data.case %}
+            <td class="case_info">{% if encounter.dynamic_data.cases %}
+                {% for case in encounter.dynamic_data.cases %}
+                    {% if not forloop.first %}<br></br>{% endif %}
+                <a href="{% url patient_case_details patient.get_id, case.get_id %}">
+                    {% format_case case %}
                 </a>
+                {% endfor %}
                 {% else %}
                     <span class="none">no case</span>
                 {% endif %}
