--- a/bhoma/apps/chw/templates/chw/chw_list.html
+++ b/bhoma/apps/chw/templates/chw/chw_list.html
@@ -29,7 +29,7 @@
 {% for chw in chws %}
         <tr>
             <td><a href="{% url single_chw chw.get_id %}">{{ chw.first_name }} {{ chw.last_name }}</a></td>
-            <td>{{ chw.current_clinic_display }} (Zone {{ chw.current_clinic_zone|default:"NONE" }}</td>
+            <td>{{ chw.current_clinic_display }} (Zone {{ chw.current_clinic_zone|default:"NONE" }})</td>
             <td>{{ chw.user.username|default:"NO USERNAME FOUND" }}</td>
             {% if debug %}<td><a href="{% url futon chw.get_id %}">view in futon (DEBUG)</a></td>{% endif %}
         </tr>
