--- a/bhoma/apps/chw/templates/chw/single_chw.html
+++ b/bhoma/apps/chw/templates/chw/single_chw.html
@@ -1,7 +1,24 @@
 {% extends "layout.html" %}
+{% block page_javascripts %}
+<script type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/confirm.js"></script>
+{% endblock %}
 {% block content %}
-<h3>{{ chw.first_name }} {{ chw.last_name }} @ {{ chw.current_clinic_display }} (Zone {{ chw.current_clinic_zone|default:"NONE" }})</h3>
+<h3>{{ chw.formatted_name }} @ {{ chw.current_clinic_display }} (Zone {{ chw.current_clinic_zone|default:"NONE" }})</h3>
 <h4><p>Your CommCare username is: <strong>{{ chw.user.username|default:"NOT SET" }}</strong></p></h4>
+<form action="delete/" method="POST" onsubmit="return confirmSubmit('Really delete {{ chw.formatted_name }}? This operation is permanent and cannot be undone. It will also affect any related reports.');">
+<input type="submit" value="Delete {{ chw.first_name }}"/>
+</form>
+{% if chw.user %}
+{% if chw.user.is_active %}
+<form action="deactivate/" method="POST" onsubmit="return confirmSubmit('Really deactivate {{ chw.formatted_name }}? This will prevent login until you active the account again.');">
+<input type="submit" value="Deactivate {{ chw.first_name }}"/>
+</form>
+{% else %}
+<form action="activate/" method="POST" onsubmit="return confirmSubmit('Activate {{ chw.formatted_name }}? This will re-allow login and phone access.');">
+    <input type="submit" value="Activate {{ chw.first_name }}"/>
+</form>
+{% endif %}
+{% endif %}
 {% if debug %}
 <p><a href="{% url futon chw.get_id %}">view in futon (DEBUG)</a></p>
 {% endif %} 
