--- a/bhoma/apps/webapp/templates/layout.html
+++ b/bhoma/apps/webapp/templates/layout.html
@@ -23,6 +23,11 @@
 {% block body %}
 <div id="inner">
     <div class="container">
+       {% block messages %}
+            {% if messages %}{% for message in messages %}
+    		    <div {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
+		    {% endfor %}{% endif %}
+       {% endblock %}
 	   {% block content %}{% endblock %}
     </div><!-- End Container Class -->
 </div>
