don't show tabs in clinic mode.
otherwise they can navigate to scary places.

--- a/bhoma/apps/webapp/templates/header.html
+++ b/bhoma/apps/webapp/templates/header.html
@@ -12,7 +12,7 @@
                 <a href="{% url bhoma.apps.webapp.views.bhoma_login %}">Log in</a>
             {% endif %}
        </div>
-       {% if user.is_authenticated %}        
+       {% if user.is_authenticated %}{% ifnotequal clinic.type.slug "clinic" %}        
        <nav>
             <ul id="top-nav">
                 {% get_tabs as tabs %}
@@ -30,6 +30,6 @@
                 
             </ul>
         </nav>
-        {% endif %}
+        {% endifnotequal %}{% endif %}
     </div><!-- End Container Class -->
 </div>
