--- a/bhoma/apps/webapp/templates/404.html
+++ b/bhoma/apps/webapp/templates/404.html
@@ -5,7 +5,7 @@
 <br></br>
 <center>
 <h3 style="color: blue;">
-Sorry, something just went wrong, causing an unexpected error.
+Sorry, we couldn't find that for you.
 </h3>
 <h5>
 Please try again to complete what you were doing.  If you keep
